--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,9 +1,14 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h2 class="display-4">{{user.name}}</h2>
-    <p class="lead">{{user.description}}</p>
+    <h2 class="name">{{user.name}}</h2>
+    <p class="role">{{user.roles}}</p>
   </div>
+<!--  <div class="personal-info">-->
+<!--    <h2>Personal Information</h2>-->
+<!--    <h5 class="email"><span>Email ID: </span>{{user.email}}</h5>-->
+<!--  </div>-->
 </div>
+
 
 <div style="width: 60vw; margin: 0 20vw;">
   <app-education></app-education>
