--- a/src/app/education/education-element/education-element.component.html
+++ b/src/app/education/education-element/education-element.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <p>{{education_detail.startMonth}}</p>
+      <p>{{education_detail.description}}</p>
+      <p>{{education_detail.startMonth}}-{{education_detail.endMonth}}</p>
     </div>
   </div>
 </div>
