--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,3 +1,21 @@
+<table class = "table table-striped">
+  <thead>
+  <tr>
+    <th>Actions</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>
+      <button class = "btn btn-info">Update</button>
+      <button class = "btn btn-danger" style="margin-left: 10px"> Delete</button>
+    </td>
+  </tr>
+  </tbody>
+</table>
+
+
+
 <div class="panel panel-default">
   <div class="container">
     <div class="row">
