--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,27 +1,18 @@
-<table class = "table table-striped">
-  <thead>
-  <tr>
-    <th>Actions</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td>
-      <button class = "btn btn-info">Update</button>
-      <button class = "btn btn-danger" style="margin-left: 10px"> Delete</button>
-    </td>
-  </tr>
-  </tbody>
-</table>
-
-
+<div class="row">
+  <div class="col-xs-12">
+      <button class="btn btn-info" type="submit">Update</button>
+      <button class="btn btn-danger" type="submit">Delete</button>
+  </div>
+</div>
 
 <div class="panel panel-default">
   <div class="container">
     <div class="row">
       <button>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="add"
+             viewBox="0 0 16 16">
+          <path
+            d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
         </svg>
       </button>
       <div class="panel-heading
