--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -6,11 +6,11 @@
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
           <p>
             <label>Username:</label>
-            <input type="text" formControlName="username">
+            <input type="text" formControlName="username" />
           </p>
           <p>
             <label>Password:</label>
-            <input type="password" formControlName="password">
+            <input type="password" formControlName="password" />
           </p>
           <p>
             <button type="submit" [disabled]="!loginForm.valid">Submit</button>
