--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,18 +1,9 @@
-<table class = "table table-striped">
-  <thead>
-  <tr>
-    <th>Actions</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td>
-      <button class = "btn btn-info"> Update</button>
-      <button class = "btn btn-danger" style="margin-left: 10px"> Delete</button>
-    </td>
-  </tr>
-  </tbody>
-</table>
+<div class="row">
+  <div class="col-xs-12">
+      <button class="btn btn-info" type="submit">Update</button>
+      <button class="btn btn-danger" type="submit">Delete</button>
+  </div>
+</div>
 
 <div class="panel panel-default">
   <div class="container">
