--- a/src/app/experience/experience-add/experience-add.component.html
+++ b/src/app/experience/experience-add/experience-add.component.html
@@ -1,4 +1,4 @@
-<div class="experienceAdd">
+<div class="glyphicon-experienceAdd">
   <h2 class="name">Add Experience</h2>
 </div>
 <div class="dashboard">
@@ -45,7 +45,7 @@
         <input id="location" type="text" placeholder="Enter location" formControlName="location">
       </div>
     </div>
-    <button class="btn btn-success" type="submit" >Submit</button>
+    <button class="btn btn-success" type="submit" >Add</button>
     <button class="btn btn-secondary right" type="reset">Reset</button>
   </form>
 </div>
