--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,12 +1,8 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h2 class="name">{{user.name}}</h2>
-    <p class="role">{{user.roles}}</p>
+    <p class="role">{{user.description}}</p>
   </div>
-<!--  <div class="personal-info">-->
-<!--    <h2>Personal Information</h2>-->
-<!--    <h5 class="email"><span>Email ID: </span>{{user.email}}</h5>-->
-<!--  </div>-->
 </div>
 
 
