--- a/src/app/education/education-add/education-add.component.html
+++ b/src/app/education/education-add/education-add.component.html
@@ -1,18 +1,18 @@
-<div class="glyphicon-experienceEdit">
-  <h2 class="name">Edit Experience</h2>
+<div class="glyphicon-educationAdd">
+  <h2 class="name">Add Education</h2>
 </div>
 <div class="dashboard">
-  <form class="user-information .col-sm-" [formGroup]="editExperienceForm" (ngSubmit)="onSubmit()">
+  <form class="user-information .col-sm-" [formGroup]="addEducationForm" (ngSubmit)="onSubmit()">
     <div class="element">
-      <label for="company" class="col-sm-4 col-form-label">Company:</label>
+      <label for="college" class="col-sm-4 col-form-label">College:</label>
       <div class="col-sm-8">
-        <input id="company" type="text" placeholder="Enter Company" formControlName="company">
+        <input id="college" type="text" placeholder="Enter College" formControlName="college">
       </div>
     </div>
     <div class="element">
-      <label for="role" class="col-sm-4 col-form-label">Role:</label>
+      <label for="course" class="col-sm-4 col-form-label">Course:</label>
       <div class="col-sm-8">
-        <input id="role" type="text" placeholder="Enter Role" formControlName="role">
+        <input id="course" type="text" placeholder="Enter Course" formControlName="course">
       </div>
     </div>
     <div class="element">
@@ -45,8 +45,8 @@
         <input id="location" type="text" placeholder="Enter location" formControlName="location">
       </div>
     </div>
-    <button class="btn btn-success" type="submit" >Update</button>
-    <button class="btn btn-secondary right" (click)="onDelete()">Delete</button>
+    <button class="btn btn-success" type="submit" >Add</button>
+    <button class="btn btn-secondary right" type="reset">Reset</button>
   </form>
 </div>
 
