--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -21,6 +21,13 @@
         </div>
         <br>
       </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h5 *ngIf="experienceList.length == 0">Experience details are yet to be added!</h5>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
