--- a/src/app/experience/experience-edit/experience-edit.component.html
+++ b/src/app/experience/experience-edit/experience-edit.component.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     <button class="btn btn-success" type="submit" >Update</button>
-    <button class="btn btn-secondary right" (click)="onDelete()">Delete</button>
+    <button class="btn btn-secondary right" type="button" (click)="onDelete()">Delete</button>
   </form>
 </div>
 
