--- a/src/app/skills/skills-add/skills-add.component.html
+++ b/src/app/skills/skills-add/skills-add.component.html
@@ -2,7 +2,7 @@
   <h2 class="name">Add Skills</h2>
 </div>
 <div class="dashboard">
-  <form class="user-information .col-sm-" [formGroup]="addSkillsForm" (ngSubmit)="onSubmit()">
+  <form class="skills-information .col-sm-" [formGroup]="addSkillsForm" (ngSubmit)="onSubmit()">
     <div class="element">
       <label for="language" class="col-sm-4 col-form-label">Language:</label>
       <div class="col-sm-8">
@@ -13,3 +13,4 @@
     <button class="btn btn-secondary right" type="reset">Reset</button>
   </form>
 </div>
+
