--- a/src/app/skills/skills-add/skills-add.component.html
+++ b/src/app/skills/skills-add/skills-add.component.html
@@ -1,16 +1,23 @@
-<div class="glyphicon-skillsAdd">
-  <h2 class="name">Add Skills</h2>
-</div>
-<div class="dashboard">
-  <form class="skills-information .col-sm-" [formGroup]="addSkillsForm" (ngSubmit)="onSubmit()">
-    <div class="element">
-      <label for="language" class="col-sm-4 col-form-label">Language:</label>
-      <div class="col-sm-8">
-        <input id="language" type="text" placeholder="Enter Language" formControlName="language">
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="glyphicon-skillsAdd">
+        <h2 class="name">Add Skills</h2>
+      </div>
+      <div class="dashboard">
+        <form class="skills-information .col-sm-4" [formGroup]="addSkillsForm" (ngSubmit)="onSubmit()">
+          <div class="element">
+            <label for="language" class="col-sm-4 col-form-label">Language:</label>
+            <div class="col-sm-8">
+              <input id="language" type="text" placeholder="Enter Language" formControlName="language">
+            </div>
+          </div>
+          <button class="btn btn-success" type="submit" >Add</button>
+          <button class="btn btn-info right" type="reset">Reset</button>
+        </form>
       </div>
     </div>
-    <button class="btn btn-success" type="submit" >Add</button>
-    <button class="btn btn-secondary right" type="reset">Reset</button>
-  </form>
+  </div>
 </div>
+
 
